Continue merge process.
Signed-off-by: Colin Hryniowski <colin.hryniowski@dell.com>